<?xml version="1.0"?>
<package>
 <name>ros_tutorials_topic</name>
 <version>0.1.0</version>
 <description>ROS tutorial package to learn the topic</description>
 <license>Apache License 2.0</license>
 <author email="168liuyunhao@sina.com">liuyunhao</author>
 <maintainer email="168liuyunhao@sina.com">liuyunhao</maintainer>
 <url type="bugtracker">https://github.com/1111111111lyh/rostrain</url>
 <url type="repository">https://github.com/1111111111lyh/rostrain</url>
 <url type="website">http://www.robotis.com</url>
 <buildtool_depend>catkin</buildtool_depend>
 <build_depend>roscpp</build_depend>
 <build_depend>std_msgs</build_depend>
 <build_depend>message_generation</build_depend>
 <run_depend>roscpp</run_depend>
 <run_depend>std_msgs</run_depend>
 <run_depend>message_runtime</run_depend>
 <export></export>
</package>
